corrected path conversions to URL reviewed by Igor Karpov